--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
 }
 
 .app {
-  background-color: #d0eceb;
+  background-color: #e5e5f7;
+  opacity: 1;
+  background-image: radial-gradient(brown 0.5px, #e5e5f7 0.5px);
+  background-size: 10px 10px;
   height: 100vh;
 }
