--- a/src/Story.css
+++ b/src/Story.css
@@ -13,17 +13,17 @@
 }
 
 .story:hover {
-  transform: scale(1.2);
+  transform: scale(1.07);
 }
 
 .story__avatar {
   margin: 10px;
-  border: 5px solid blue;
+  border: 5px solid #2e81f4;
 }
 
 .story > h4 {
   position: absolute;
-  color: aliceblue;
-  left: 20px;
   bottom: 20px;
+  left: 20px;
+  color: white;
 }
